comunication, conexion, interfaces, utilitarios, pom.xml edit