@@ -5,10 +5,36 @@
     <artifactId>LabVet_V3</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
+        <!-- Agrega el módulo java.desktop para las clases AWT -->
+        <maven.compiler.compilerArgs>--add-modules java.desktop</maven.compiler.compilerArgs>
         <exec.mainClass>com.mycompany.labvet_v3.LabVet_V3</exec.mainClass>
     </properties>
+
+    <dependencies>
+        <!-- Dependencia para PostgreSQL -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.20</version>
+        </dependency>
+
+        <!-- Dependencia para JavaMail -->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
+        <!-- Dependencia para JFreeChart -->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+    </dependencies>
 </project>
